source/blender/editors/transform/transform_constraints.c
@@ -984,6 +984,7 @@ void initSelectConstraint(TransInfo *t)
   }
 
   setUserConstraint(t, CON_APPLY | CON_SELECT, "%s");
+  selectConstraint(t);
 }
 
 void selectConstraint(TransInfo *t)
@@ -996,19 +997,7 @@ void selectConstraint(TransInfo *t)
 
 void postSelectConstraint(TransInfo *t)
 {
-  if (!(t->con.mode & CON_SELECT)) {
-    return;
-  }
-
-  t->con.mode &= ~CON_AXIS0;
-  t->con.mode &= ~CON_AXIS1;
-  t->con.mode &= ~CON_AXIS2;
   t->con.mode &= ~CON_SELECT;
-
-  setNearestAxis(t);
-
-  startConstraint(t);
-  t->redraw = TREDRAW_HARD;
 }
 
 static void setNearestAxis2d(TransInfo *t)
